# Text_Summarizer_PyTorch

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  app.py  dependency_checker.py  main.py  params.json  pyproject.toml  requirements.txt  setup.py  submit_job_gcr.py  template.py
architecture/: architecture.excalidraw
config/: config.json
src/textSummarizer/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_training.py
src/textSummarizer/config/: configuration.py
src/textSummarizer/constants/: __init__.py
src/textSummarizer/entity/: __init__.py
src/textSummarizer/loggin/: __init__.py
src/textSummarizer/logging/: __init__.py
src/textSummarizer/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_evaluation_pipeline.py  model_inference_pipeline.py  model_training_pipeline.py
src/textSummarizer/utils/: common.py
